--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,4 @@
 [server]
 runOnSave = true
 # Enable wide mode
-enableCORS = false
-
-[browser]
-# Open the app in wide mode
-browser.gather = true
+# enableCORS = false
