--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
-annotated-types==0.7.0
 anyio==4.4.0
-appnope==0.1.4
 asttokens==2.4.1
 attrs==24.2.0
 backcall==0.2.0
@@ -13,7 +11,6 @@ bleach==6.1.0
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
-charset-normalizer==3.3.2
 click==8.1.7
 decorator==5.1.1
 defusedxml==0.7.1
@@ -22,7 +19,6 @@ docopt==0.6.2
 executing==2.1.0
 fastjsonschema==2.20.0
 Flask==3.0.3
-Flask-SocketIO==5.3.6
 frozenlist==1.4.1
 gotrue==2.7.0
 h11==0.14.0
@@ -39,12 +35,10 @@ itsdangerous==2.2.0
 jedi==0.19.1
 Jinja2==3.1.4
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
 MarkupSafe==2.1.5
-matplotlib-inline==0.1.7
 mistune==3.0.2
 multidict==6.0.5
 nbclient==0.10.0
@@ -61,8 +55,6 @@ pipreqs==0.5.0
 platformdirs==4.2.2
 postgrest==0.16.11
 prompt_toolkit==3.0.47
-proto-plus==1.24.0
-protobuf==5.28.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyasn1==0.6.0
@@ -72,22 +64,16 @@ pydantic_core==2.20.1
 Pygments==2.18.0
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
-python-engineio==4.9.1
-python-socketio==5.11.3
 pyzmq==26.2.0
 realtime==2.0.2
 redis==5.0.8
 referencing==0.35.1
 requests==2.32.3
-requests-oauthlib==2.0.0
-rpds-py==0.20.0
 rsa==4.9
 setuptools==74.0.0
-simple-websocket==1.0.0
 six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
-stack-data==0.6.3
 storage3==0.7.7
 StrEnum==0.4.15
 supabase==2.7.3
@@ -106,3 +92,13 @@ wheel==0.44.0
 wsproto==1.2.0
 yarg==0.1.9
 yarl==1.9.7
+pip~=24.2
+pillow~=10.4.0
+colorama~=0.4.6
+pytz~=2024.1
+rich~=13.7.1
+objgraph~=3.6.1
+google-api-python-client~=2.142.0
+numpy~=2.1.0
+websocket-client~=1.8.0
+fastapi~=0.114.2
